<resources>
    <string name="app_name">Project 33 of Android Development_BMI Calculator</string>
    <string name="welcome_back_to_nmy_bmi_calculator">Welcome \nback..! to \nMy BMI Calculator</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="calculate_bmi">CALCULATE BMI</string>
    <string name="result">Result</string>
    <string name="height">Height</string>
</resources>