<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2"
    android:background="@drawable/main_screen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:text="@string/bmi_calculator"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/body_mass_index"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic|bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55sp"
            android:layout_marginEnd="55sp"
            android:layout_marginTop="265dp"
            app:cardCornerRadius="20sp"
            android:backgroundTint="#00bdd8"
            app:cardElevation="15sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="16sp">

                    <TextView
                        android:id="@+id/weighText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/weight"
                        android:textSize="20sp"
                        android:textColor="@color/navy"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:id="@+id/editTextForWeightEdit"
                        android:textSize="30sp"
                        android:hint="@string/kg"
                        android:layout_marginEnd="6dp"
                        android:textAlignment="center"
                        android:textColor="@color/navy"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="16sp">

                    <TextView
                        android:id="@+id/heightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/height"
                        android:textSize="20sp"
                        android:textColor="@color/navy"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:id="@+id/editTextForHeightEdit"
                        android:textSize="30sp"
                        android:hint="@string/cm"
                        android:layout_marginStart="6dp"
                        android:textAlignment="center"
                        android:textColor="@color/navy"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonForBMI_Calculator"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="35sp"
        android:text="@string/calculate_bmi"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewForResult"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15sp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textColor="@color/navy"
        android:text="@string/result"/>

</LinearLayout>